{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 28,
  "lineage": "6ce9f422-acc9-af0d-e19b-9d6870ff4899",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cg_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:internet-gateway/igw-0e9b75fd7c086e7dc",
            "id": "igw-0e9b75fd7c086e7dc",
            "owner_id": "344515950067",
            "tags": {
              "Name": "CloudGoat Internet Gateway"
            },
            "tags_all": {
              "Name": "CloudGoat Internet Gateway"
            },
            "vpc_id": "vpc-090f7de7f471351bc"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:route-table/rtb-08b349684cd13c448",
            "id": "rtb-08b349684cd13c448",
            "owner_id": "344515950067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9b75fd7c086e7dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CloudGoat Public Route Table"
            },
            "tags_all": {
              "Name": "CloudGoat Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-090f7de7f471351bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cg_internet_gateway",
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a71640a39842219",
            "route_table_id": "rtb-08b349684cd13c448",
            "subnet_id": "subnet-0a30153b533ff093d"
          },
          "dependencies": [
            "aws_internet_gateway.cg_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.cg_public_subnet_1",
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0951c51f46030719c",
            "route_table_id": "rtb-08b349684cd13c448",
            "subnet_id": "subnet-070eb42249b11fb54"
          },
          "dependencies": [
            "aws_internet_gateway.cg_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.cg_public_subnet_2",
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:security-group/sg-0af88ce14195042a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af88ce14195042a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "cloudgoat-ec2-20240418160605830500000005",
            "name_prefix": "cloudgoat-ec2-",
            "owner_id": "344515950067",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-090f7de7f471351bc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg_public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:subnet/subnet-0a30153b533ff093d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a30153b533ff093d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344515950067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CloudGoat Public Subnet #1"
            },
            "tags_all": {
              "Name": "CloudGoat Public Subnet #1"
            },
            "vpc_id": "vpc-090f7de7f471351bc"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cg_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:subnet/subnet-070eb42249b11fb54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070eb42249b11fb54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "344515950067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CloudGoat Public Subnet #2"
            },
            "tags_all": {
              "Name": "CloudGoat Public Subnet #2"
            },
            "vpc_id": "vpc-090f7de7f471351bc"
          },
          "dependencies": [
            "aws_vpc.cg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:344515950067:vpc/vpc-090f7de7f471351bc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08094a092b2c1da22",
            "default_route_table_id": "rtb-035467485e62ef447",
            "default_security_group_id": "sg-0f65e803c1edfbf7d",
            "dhcp_options_id": "dopt-1b2e407c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090f7de7f471351bc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035467485e62ef447",
            "owner_id": "344515950067",
            "tags": {
              "Name": "CloudGoat VPC"
            },
            "tags_all": {
              "Name": "CloudGoat VPC"
            }
          }
        }
      ]
    }
  ]
}